# ComfyUI_OmniSVG

./: Installation_Guide.md  OmniSVG_node.py  README.md  __init__.py  node_utils.py  pyproject.toml  requirements.txt
OmniSVG/: .gitignore  README.md  app.py  config.yaml  decoder.py  examples.txt  inference.py  requirements.txt  tokenizer.py  util.py
OmniSVG/data/: convert_svg2png.py
OmniSVG/deepsvg/: config.py  svgtensor_dataset.py  visualize.py
OmniSVG/deepsvg/gui/: interpolate.py  utils.py
OmniSVG/deepsvg/model/: config.py  loss.py  model.py  utils.py
OmniSVG/deepsvg/svglib/: svg.py  svg_command.py  svg_path.py  utils.py
example_workflows/: omnisvg.json
