[project]
name = "omnisvg"
description = "OmniSVG: A Unified Scalable Vector Graphics Generation Model,you can try it in ComfyUI."
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["#gradio==5.37.0", "transformers>=4.51.3", "#numpy==2.2.6", "# Pillow==10.1.0", "CairoSVG==2.7.1; sys_platform != 'win32'", "# einops==0.4.1", "qwen-vl-utils", "# ConfigArgParse==1.7.1", "# PyYAML==6.0.2", "# typing-inspection==0.4.0", "# typing_extensions==4.12.2", "# ipython==8.12.3", "moviepy", "# shapely==2.0.7", "torch", "torchvision", "pycairo"]

[project.urls]
Repository = "https://github.com/smthemex/ComfyUI_OmniSVG"
#  Used by Comfy Registry https://registry.comfy.org

[tool.comfy]
PublisherId = "smthemex"
DisplayName = "ComfyUI_OmniSVG"
Icon = ""
includes = []
